@@ -36,20 +36,20 @@ Disassembly of section .text:
 0[0-9a-f]+ <[^>]+> fefd0b60 	vcvtn.u32.f64	s1, d16
 0[0-9a-f]+ <[^>]+> febefb4f 	vcvtp.u32.f64	s30, d15
 0[0-9a-f]+ <[^>]+> fefffb6f 	vcvtm.u32.f64	s31, d31
-0[0-9a-f]+ <[^>]+> eeb60ac0 	vrintz.f32.f32	s0, s0
-0[0-9a-f]+ <[^>]+> eef70a60 	vrintx.f32.f32	s1, s1
-0[0-9a-f]+ <[^>]+> 0eb6fa4f 	vrintreq.f32.f32	s30, s30
-0[0-9a-f]+ <[^>]+> feb80a40 	vrinta.f32.f32	s0, s0
-0[0-9a-f]+ <[^>]+> fef90a60 	vrintn.f32.f32	s1, s1
-0[0-9a-f]+ <[^>]+> febafa4f 	vrintp.f32.f32	s30, s30
-0[0-9a-f]+ <[^>]+> fefbfa6f 	vrintm.f32.f32	s31, s31
-0[0-9a-f]+ <[^>]+> eeb60bc0 	vrintz.f64.f64	d0, d0
-0[0-9a-f]+ <[^>]+> eeb71b41 	vrintx.f64.f64	d1, d1
-0[0-9a-f]+ <[^>]+> 0ef6eb6e 	vrintreq.f64.f64	d30, d30
-0[0-9a-f]+ <[^>]+> feb80b40 	vrinta.f64.f64	d0, d0
-0[0-9a-f]+ <[^>]+> feb91b41 	vrintn.f64.f64	d1, d1
-0[0-9a-f]+ <[^>]+> fefaeb6e 	vrintp.f64.f64	d30, d30
-0[0-9a-f]+ <[^>]+> fefbfb6f 	vrintm.f64.f64	d31, d31
+0[0-9a-f]+ <[^>]+> eeb60ac0 	vrintz.f32	s0, s0
+0[0-9a-f]+ <[^>]+> eef70a60 	vrintx.f32	s1, s1
+0[0-9a-f]+ <[^>]+> 0eb6fa4f 	vrintreq.f32	s30, s30
+0[0-9a-f]+ <[^>]+> feb80a40 	vrinta.f32	s0, s0
+0[0-9a-f]+ <[^>]+> fef90a60 	vrintn.f32	s1, s1
+0[0-9a-f]+ <[^>]+> febafa4f 	vrintp.f32	s30, s30
+0[0-9a-f]+ <[^>]+> fefbfa6f 	vrintm.f32	s31, s31
+0[0-9a-f]+ <[^>]+> eeb60bc0 	vrintz.f64	d0, d0
+0[0-9a-f]+ <[^>]+> eeb71b41 	vrintx.f64	d1, d1
+0[0-9a-f]+ <[^>]+> 0ef6eb6e 	vrintreq.f64	d30, d30
+0[0-9a-f]+ <[^>]+> feb80b40 	vrinta.f64	d0, d0
+0[0-9a-f]+ <[^>]+> feb91b41 	vrintn.f64	d1, d1
+0[0-9a-f]+ <[^>]+> fefaeb6e 	vrintp.f64	d30, d30
+0[0-9a-f]+ <[^>]+> fefbfb6f 	vrintm.f64	d31, d31
 0[0-9a-f]+ <[^>]+> eeb30bc0 	vcvtt.f16.f64	s0, d0
 0[0-9a-f]+ <[^>]+> eef30b60 	vcvtb.f16.f64	s1, d16
 0[0-9a-f]+ <[^>]+> eeb3fbcf 	vcvtt.f16.f64	s30, d15
@@ -90,20 +90,20 @@ Disassembly of section .text:
 0[0-9a-f]+ <[^>]+> fefd 0b60 	vcvtn.u32.f64	s1, d16
 0[0-9a-f]+ <[^>]+> febe fb4f 	vcvtp.u32.f64	s30, d15
 0[0-9a-f]+ <[^>]+> feff fb6f 	vcvtm.u32.f64	s31, d31
-0[0-9a-f]+ <[^>]+> eeb6 0ac0 	vrintz.f32.f32	s0, s0
-0[0-9a-f]+ <[^>]+> eef7 0a60 	vrintx.f32.f32	s1, s1
-0[0-9a-f]+ <[^>]+> eeb6 fa4f 	vrintr.f32.f32	s30, s30
-0[0-9a-f]+ <[^>]+> feb8 0a40 	vrinta.f32.f32	s0, s0
-0[0-9a-f]+ <[^>]+> fef9 0a60 	vrintn.f32.f32	s1, s1
-0[0-9a-f]+ <[^>]+> feba fa4f 	vrintp.f32.f32	s30, s30
-0[0-9a-f]+ <[^>]+> fefb fa6f 	vrintm.f32.f32	s31, s31
-0[0-9a-f]+ <[^>]+> eeb6 0bc0 	vrintz.f64.f64	d0, d0
-0[0-9a-f]+ <[^>]+> eeb7 1b41 	vrintx.f64.f64	d1, d1
-0[0-9a-f]+ <[^>]+> eef6 eb6e 	vrintr.f64.f64	d30, d30
-0[0-9a-f]+ <[^>]+> feb8 0b40 	vrinta.f64.f64	d0, d0
-0[0-9a-f]+ <[^>]+> feb9 1b41 	vrintn.f64.f64	d1, d1
-0[0-9a-f]+ <[^>]+> fefa eb6e 	vrintp.f64.f64	d30, d30
-0[0-9a-f]+ <[^>]+> fefb fb6f 	vrintm.f64.f64	d31, d31
+0[0-9a-f]+ <[^>]+> eeb6 0ac0 	vrintz.f32	s0, s0
+0[0-9a-f]+ <[^>]+> eef7 0a60 	vrintx.f32	s1, s1
+0[0-9a-f]+ <[^>]+> eeb6 fa4f 	vrintr.f32	s30, s30
+0[0-9a-f]+ <[^>]+> feb8 0a40 	vrinta.f32	s0, s0
+0[0-9a-f]+ <[^>]+> fef9 0a60 	vrintn.f32	s1, s1
+0[0-9a-f]+ <[^>]+> feba fa4f 	vrintp.f32	s30, s30
+0[0-9a-f]+ <[^>]+> fefb fa6f 	vrintm.f32	s31, s31
+0[0-9a-f]+ <[^>]+> eeb6 0bc0 	vrintz.f64	d0, d0
+0[0-9a-f]+ <[^>]+> eeb7 1b41 	vrintx.f64	d1, d1
+0[0-9a-f]+ <[^>]+> eef6 eb6e 	vrintr.f64	d30, d30
+0[0-9a-f]+ <[^>]+> feb8 0b40 	vrinta.f64	d0, d0
+0[0-9a-f]+ <[^>]+> feb9 1b41 	vrintn.f64	d1, d1
+0[0-9a-f]+ <[^>]+> fefa eb6e 	vrintp.f64	d30, d30
+0[0-9a-f]+ <[^>]+> fefb fb6f 	vrintm.f64	d31, d31
 0[0-9a-f]+ <[^>]+> eeb3 0bc0 	vcvtt.f16.f64	s0, d0
 0[0-9a-f]+ <[^>]+> eef3 0b60 	vcvtb.f16.f64	s1, d16
 0[0-9a-f]+ <[^>]+> eeb3 fbcf 	vcvtt.f16.f64	s30, d15
